<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.fragment.ContactFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarContact"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_dashboard"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgMyAva"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/toolbarContact"
            android:layout_margin="20dp"
            android:src="@drawable/pas">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/tvMyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarContact"
            android:layout_marginTop="30dp"
            android:text="@string/nama"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMyName"
            android:text="@string/nim"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgMyAva"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <RelativeLayout
                android:id="@+id/lytPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingBottom="20dp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/tvMyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPhone"
                    android:text="@string/phone"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingBottom="20dp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tvMyEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEmail"
                    android:text="@string/email"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytIg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <ImageView
                    android:id="@+id/imgIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingBottom="20dp"
                    android:tint="@android:color/white" />

                <TextView
                    android:id="@+id/tvIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/ig" />

                <TextView
                    android:id="@+id/tvMyIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvIg"
                    android:text="@string/ig"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lytTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <ImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:paddingBottom="20dp" />

                <TextView
                    android:id="@+id/tvTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/twiter" />

                <TextView
                    android:id="@+id/tvMyTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTwitter"
                    android:text="@string/twiter"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>